--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -6,19 +6,19 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Post Task" />
+            android:icon="@drawable/task"
+            android:title="New Tasks" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="My Assigned Task" />
+            android:icon="@drawable/new_task"
+            android:title="Post New Task" />
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/done_task"
             android:title="Completed Task" />
         <item
             android:id="@+id/payment_history"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/paymet"
             android:title="Payment History" />
     </group>
 </menu>
